etc/iptables/iptables-log.rules
# Generated by iptables-save v1.4.21 on Mon Feb 23 13:08:27 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i eno1 -p udp -m multiport --dports 53,5353 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -j LOG --log-prefix iptables-tcp-reject --log-level 6 --log-tcp-options --log-ip-options
-A INPUT -p udp -j LOG --log-prefix iptables-udp-reject --log-level 6 --log-ip-options
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -i eno1 -o wlo1 -m mac --mac-source B8:27:EB:0C:D5:40 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Feb 23 13:08:27 2015
# Generated by iptables-save v1.4.21 on Mon Feb 23 13:08:27 2015
*nat
:PREROUTING ACCEPT [5:1640]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [45:2750]
:POSTROUTING ACCEPT [45:2750]
-A POSTROUTING -s 192.168.52.0/24 -o wlo1 -j MASQUERADE
COMMIT
# Completed on Mon Feb 23 13:08:27 2015
# Generated by iptables-save v1.4.21 on Mon Feb 23 13:08:27 2015
*mangle
:PREROUTING ACCEPT [558:526550]
:INPUT ACCEPT [554:525238]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [458:56492]
:POSTROUTING ACCEPT [458:56492]
COMMIT
# Completed on Mon Feb 23 13:08:27 2015
