etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Sat May  9 10:40:06 2015
*mangle
:PREROUTING ACCEPT [45:13252]
:INPUT ACCEPT [44:13220]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [52:5490]
:POSTROUTING ACCEPT [52:5490]
COMMIT
# Completed on Sat May  9 10:40:06 2015
# Generated by iptables-save v1.4.21 on Sat May  9 10:40:06 2015
*nat
:PREROUTING ACCEPT [5:351]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [9:598]
:POSTROUTING ACCEPT [10:638]
-A POSTROUTING -s 192.168.52.0/24 -o wlo1 -j MASQUERADE
COMMIT
# Completed on Sat May  9 10:40:06 2015
# Generated by iptables-save v1.4.21 on Sat May  9 10:40:06 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [9:671]
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 5241 -j ACCEPT
-A INPUT -i eno1 -p udp -m multiport --dports 53,5353 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -i eno1 -o wlo1 -m mac --mac-source B8:27:EB:0C:D5:40 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat May  9 10:40:06 2015
